<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBDEFB">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:padding="50dp"
        android:text="@string/activate_offline_upi"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Info Section -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/header">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/overlay_background"
            android:orientation="vertical"
            android:padding="25dp">


            <TextView
                android:id="@+id/Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:padding="10dp"
                android:text="@string/Activate_info"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:paddingRight="30dp"
        android:paddingLeft="30dp">

        <Button
            android:id="@+id/setUpBtn"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:backgroundTint="@color/btnColor"
            android:text="@string/setup" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:backgroundTint="@color/btnColor"
            android:text="@string/continue_next" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
